--- a/D16VideoCommander/source/VideoCommander/VideoCommander.csproj
+++ b/D16VideoCommander/source/VideoCommander/VideoCommander.csproj
@@ -115,6 +115,9 @@
       <DependentUpon>AddDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Main.en.resx">
+      <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
