Save user configuration in user settings (allows execution from programs folder).
git-tfs-id: [https://tfs.codeplex.com:443/tfs/TFS21]$/videocommander;C12572

--- a/D16VideoCommander/source/VideoCommander/app.config
+++ b/D16VideoCommander/source/VideoCommander/app.config
@@ -1,7 +1,12 @@
 <?xml version="1.0"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="D16.VideoCommander.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <appSettings>
-    <add key="vlcPath" value="D:\Program Files (x86)\VideoLan\VLC\vlc.exe" />
+    <add key="defaultVlcPath" value="D:\Program Files (x86)\VideoLan\VLC\vlc.exe" />
   </appSettings>
   <startup>
       <supportedRuntime version="v2.0.50727" sku="Client"/>
@@ -13,4 +18,32 @@
       </listeners>
     </trace>
   </system.diagnostics>
+  <userSettings>
+    <D16.VideoCommander.Properties.Settings>
+      <setting name="VlcPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Display1" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Display2" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="AudioLanguage" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ShowVideoTitle" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="CurrentDisplay" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="FormLeft" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="FormTop" serializeAs="String">
+        <value>0</value>
+      </setting>
+    </D16.VideoCommander.Properties.Settings>
+  </userSettings>
 </configuration>
