Fixed German localization; added "DVD" button to "Add" dialog
git-tfs-id: [https://tfs.codeplex.com:443/tfs/TFS21]$/videocommander;C12976

--- a/D16VideoCommander/source/VideoCommander/VideoCommander.csproj
+++ b/D16VideoCommander/source/VideoCommander/VideoCommander.csproj
@@ -114,12 +114,18 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AddDialog.de.resx">
+      <DependentUpon>AddDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddDialog.en.resx">
       <DependentUpon>AddDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AddDialog.resx">
       <DependentUpon>AddDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Main.de.resx">
+      <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.en.resx">
       <DependentUpon>Main.cs</DependentUpon>
