--- a/source/VideoCommander/VideoCommander.csproj
+++ b/source/VideoCommander/VideoCommander.csproj
@@ -82,6 +82,12 @@
     <Compile Include="ConfigManager.cs" />
     <Compile Include="DisplaySetting.cs" />
     <Compile Include="DisplaySettingSerializer.cs" />
+    <Compile Include="DvdSetting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DvdSetting.Designer.cs">
+      <DependentUpon>DvdSetting.cs</DependentUpon>
+    </Compile>
     <Compile Include="FileExtensionRegistry.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -127,6 +133,15 @@
     <EmbeddedResource Include="AddDialog.resx">
       <DependentUpon>AddDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DvdSetting.de.resx">
+      <DependentUpon>DvdSetting.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DvdSetting.en.resx">
+      <DependentUpon>DvdSetting.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DvdSetting.resx">
+      <DependentUpon>DvdSetting.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.de.resx">
       <DependentUpon>Main.cs</DependentUpon>
