Refactoring and code style

--- a/source/VideoCommander/app.config
+++ b/source/VideoCommander/app.config
@@ -6,7 +6,7 @@
     </sectionGroup>
   </configSections>
   <appSettings>
-    <add key="defaultVlcPath" value="D:\Program Files (x86)\VideoLan\VLC\vlc.exe" />
+    <add key="defaultVlcPath" value="C:\Program Files (x86)\VideoLan\VLC\vlc.exe" />
   </appSettings>
   <startup>
       <supportedRuntime version="v2.0.50727" sku="Client"/>
